# routes/personalPlan.js
@@ -6,6 +6,6 @@ router.post("/pre", authenticate, personalPlanCtrl.prePersonalPlan);
 router.post("/", authenticate, personalPlanCtrl.addPersonalPlan);
 router.get("/daily-limit", authenticate, personalPlanCtrl.getDailyLimit);
 router.get("/", authenticate, personalPlanCtrl.getPersonalPlan);
-router.patch("/", authenticate, personalPlanCtrl.patchPersonalPlan);
+router.put("/", authenticate, personalPlanCtrl.patchPersonalPlan);
 
 module.exports = router;
